--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     gtag('config', 'G-E00L9PT3V9');
   </script>
-  <title>{{ site.name }}</title>
+  <!-- <title>{{ site.name }}</title> -->
+   <title>Dhruv Shah</title>
 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta name="author" content="{{ site.name }}" />
@@ -30,12 +31,16 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h1>Dhruv Shah</h1>
-              <p>I am a final year undergraduate student at Dhirubhai Ambani University, Gandhingar (formerly DA-IICT).</p>
+              <p>I am a final year undergraduate student majoring in Maths and Computing at <a href="https://www.daiict.ac.in/">Dhirubhai Ambani University, Gandhingar</a> (formerly DA-IICT). Currently, I am working on sequential fairness auditing algorithms for my bachelor's thesis under the guidance of <a href="https://sites.google.com/view/rachitchhaya/">Prof. Rachit Chhaya</a> (DA-IICT) and <a href="https://sites.google.com/view/manishapadala/home">Prof. Manisha Padala</a> (IIT Gandhinagar) </p>
+              <p>Previously, I have worked on Imputation Techniques for analysing Missing Data with <a href="https://www.daiict.ac.in/faculty-details/3793"> Tathagata Bandyopadhyay </a> and also on Financial Time Series Analysis under the guidance of <a href="https://sites.google.com/view/mtiwari"> Mukesh Tiwari </a> at the <a href="https://csg.daiict.ac.in/"> Complex Systems Group </a>, DA-IICT </p> 
               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/NgXqP9ex">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/shahdhruv29">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dhruv-shah-a41047220/">LinkedIn</a>
               </p>
+            </td>
+            <td style="padding:2.5%;width:37%;max-width:37%">
+              <a href="Images/Dhruv.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="Images/dhruv.jpeg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </table>
@@ -44,7 +49,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Interests</h2>
-              <p>I'm broadly interested in Fairness in AI, Machine Learning, and Reinforcement Learning.</p>
+              <p>My interests lie in Fairness in Machine Learning, Multi-Armed Bandits and Reinforcement Learning.</p>
             </td>
           </tr>
         </table>
