--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:37%;max-width:37%">
-              <a href="Images/dhruv.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="Images/dhruv.jpeg" class="hoverZoomLink"></a>
+              <a href="./Images/dhruv.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="./Images/dhruv.jpeg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </table>
