--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr style="padding:0px">
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h1>Dhruv Shah</h1>
+              <p class="name" style="text-align: center;">
+                Dhruv Shah
+              </p>
+              <!-- <h1>Dhruv Shah</h1> -->
               <p>I am a final year undergraduate student majoring in Maths and Computing at <a href="https://www.daiict.ac.in/">Dhirubhai Ambani University, Gandhingar</a> (formerly DA-IICT). Currently, I am working on sequential fairness auditing algorithms for my bachelor's thesis under the guidance of <a href="https://sites.google.com/view/rachitchhaya/">Prof. Rachit Chhaya</a> (DA-IICT) and <a href="https://sites.google.com/view/manishapadala/home">Prof. Manisha Padala</a> (IIT Gandhinagar) </p>
               <p>Previously, I have worked on Imputation Techniques for analysing Missing Data with <a href="https://www.daiict.ac.in/faculty-details/3793"> Tathagata Bandyopadhyay </a> and also on Financial Time Series Analysis under the guidance of <a href="https://sites.google.com/view/mtiwari"> Mukesh Tiwari </a> at the <a href="https://csg.daiict.ac.in/"> Complex Systems Group </a>, DA-IICT </p> 
               <p style="text-align:center">
